--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		</nav>
 
 		<h1>Victoria Wilson</h1>
+		<p>Pretty cool person!</p>
 
 		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 		  <ol class="carousel-indicators">
