Added about page

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		</nav>
 
 		<h1>Victoria Wilson</h1>
-		<p>Pretty cool person!</p>
-
+		<p>Pretty cool person!<p>
+			
 		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 		  <ol class="carousel-indicators">
 		    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
