Playing with the CSS

--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@
 		  </a>
 		</div>
 
+		<div class="festivals">
+			<h1>Experience</h1>
+			<h3>Festival Production</h3>
+
+			<ul>
+				<li>Jazzfest</li>
+				<li>Buku</li>
+				<li>WE Fest</li>
+				<li>Voodoo</li>
+				<li>Electric Zoo</li>
+			</ul>
+		</div>
+
 
 		<footer>&Copy; Victoria Wilson 2019</footer>
 
